Dashboard meine Aufgaben/Projekte, Sprint View angepasst, Burndown Controller angelegt,

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h3>
-    <small>Editing</small>
+    <small>edit mode</small>
     <br/>
     <%= @project.name %>
   </h3>
