--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,29 +2,40 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .tile  {
-  display: inline-block;
-  border: 1px solid #DADADA;
+  display: inline-table;
+  border: 1px solid #3498db;
   width: 150px;
   height: 150px;
   background-color: #3498db;
   color: #F7F7F7;
+  margin-bottom: 5px;
 
   &:hover {
     background-color: #2980b9;
     color: #F7F7F7;
-    
+    text-decoration: none;
   }
 
   .glyphicon {
     margin-top: 20px;
-    margin-left: 40px;
+    margin-left: 42px;
     margin-right: 15px;
     font-size: 64px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   .name {
     text-align: center;
     position: relative;
+  }
+}
+
+.tile.newtile {
+  background-color: #F7F7F7;
+  color: #999999;
+  border: 1px solid #999999;
+  &:hover {
+    background-color: #999999;
+    color: #F7F7F7;
   }
 }
