--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,10 +3,10 @@
     <div class="col-md-4">
       <h4>Meine Projekte</h4>
       <% @myprojects.each do |p| %>
-      <a class="tile">
-        <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
-        <div class="name"><%= p.name %></div>
-      </a>
+          <%= link_to project_path(:id => p.id), class: "tile" do %>
+              <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
+              <div class="name"><%= p.name %></div>
+          <% end %>
       <% end %>
     </div>
     <div class="col-md-8">
@@ -15,9 +15,33 @@
       <%= timeline data %>
     </div>
   </div>
+  <hr/>
   <div class="row">
     <h4>Meine Aufgaben</h4>
+    <table class="table">
+      <thead>
+      <tr>
+        <th>Title</th>
+        <th>State</th>
+        <th>Priority</th>
+        <th>Remainingwork</th>
+        <th>Effort</th>
+      </tr>
+      </thead>
 
+      <tbody>
+      <% @mytasks.each do |task| %>
+          <tr>
+            <td><%= link_to task.title, edit_task_path(:id => task.id, :returnUrl => request.original_url), data: {toggle: "modal", target: "#modal"} %></td>
+            <td><%= task.state %></td>
+            <td><%= task.priority %></td>
+            <td><%= task.remainingwork %></td>
+            <td><%= task.effort %></td>
+            <td><%= task.sprint_id %></td>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
   </div>
-
 </div>
+
