--- a/app/views/burndown/index.html.erb
+++ b/app/views/burndown/index.html.erb
@@ -3,20 +3,38 @@
   <h3>
     <small>Burndown Chart</small>
     <br/>
-    <%= @project.name %>
+
   </h3>
 </div>
 <hr/>
 <div class="container">
-  TODO: Hier Sprints auswählen
+  <%
+    @sprints.each do |i|
+      %>
+        <h1>
+          <%= link_to i.name, burndown_index_path(:project => @project.id, :sprint => i.id) %>
+        </h1>
+      <%= @tageImSprint %>
+      <%= @scrumPoints %>
+      <%= @averagePoints %>
+      <%= @aufwand %>
+      <%
+    end
+  %>
+
 </div>
 <hr>
 <div class="container">
 
-  <!-- Line Chart - Single Series -->
-  <div class="col-xs-12">
-    <%= line_chart [{'data': @serieAverage, 'name': 'Ideal'},
-                    {'data': @serieReal, 'name': 'Remain'}],
-                   {library: {hAxis: {title: "Tage"}, vAxis: {title: "Story Points"}}} %>
-  </div>
+  <% if @sprint != nil%>
+      <div class="col-xs-12">
+        <%= line_chart [{'data': @serieAverage, 'name': 'Ideal'},
+                        {'data': @serieReal, 'name': 'Remain'}],
+                       {library: {hAxis: {title: "Tage"}, vAxis: {title: "Story Points"}}} %>
+      </div>
+  <% else %>
+    <p>Bitte wählen Sie einen Sprint aus der Liste aus!</p>
+  <% end %>
+
+
 </div>
