--- a/app/views/backlogitems/_form.html.erb
+++ b/app/views/backlogitems/_form.html.erb
@@ -31,7 +31,7 @@
 
       <div class="form-group">
         <%= form.label :assignedto %>
-        <%= form.text_field :assignedto, id: :backlogitem_assignedto, :class => 'form-control' %>
+        <%= form.select :assignedto, User.all.collect {|p| [p.email, p.id]}, {include_blank: "Select something"}, {:class => 'form-control'} %>
       </div>
 
       <div class="form-group">
@@ -49,6 +49,12 @@
         <%= form.label :effort %>
         <%= form.number_field :effort, id: :backlogitem_effort, :class => 'form-control' %>
       </div>
+
+      <div class="form-group">
+        <%= form.label :sprint_id %>
+        <%= form.select :sprint_id, Sprint.where(:project_id => @backlogitem.project_id).collect {|p| [p.name, p.id]}, {include_blank: "Select something"}, {:class => 'form-control'} %>
+      </div>
+
     </div>
     <div class="modal-footer">
       <%= link_to 'Close', backlogitems_path(:project => @project_id), :class => 'btn btn-default' %>
