--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,16 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Dashboard", "/" %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projekte
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <%
+              if params[:project]
+                @current_project = Project.find(params[:project]).name
+              end
+              if @current_project.nil?
+                @current_project = 'Projekte'
+              end
+            %>
+            <%= @current_project %>
             <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <% Project.all.each do |project| %>
