--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -34,7 +34,7 @@
   </div>
 
   <%= link_to 'Backlog', backlogitems_path(:project => @project.id) %> |
-  <%= link_to 'Scrum Board', board_index_path(:project => @project.id) %> |
+  <%= link_to 'Scrum Board', board_index_path(:project => @project.id, :sprint => 'All') %> |
   <%= link_to 'Sprints', sprints_path(:project => @project.id) %> |
   <%= link_to 'Burndown Chart', burndown_index_path(:project => @project.id) %>
 
