--- a/app/views/sprints/edit.html.erb
+++ b/app/views/sprints/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Sprint</h1>
-
+<div class="modal-header">
+  <h4 class="modal-title" id="myModalLabel">Editing Sprint</h4>
+</div>
 <%= render 'form', sprint: @sprint %>
-
-<%= link_to 'Show', @sprint %> |
-<%= link_to 'Back', sprints_path %>
