--- a/app/views/sprints/new.html.erb
+++ b/app/views/sprints/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Sprint</h1>
-
+<div class="modal-header">
+  <h4 class="modal-title" id="myModalLabel">New Sprint</h4>
+</div>
 <%= render 'form', sprint: @sprint %>
-
-<%= link_to 'Back', sprints_path %>
