--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -20,6 +20,9 @@
 
       <%= hidden_field_tag :returnUrl, @returnUrl %>
 
+      Nur zum Testen!!!
+      <%= form.text_field :updated_at, id: :task_updated_at, :class => 'form-control', validate: true %>
+      !!
 
       <div class="form-group">
         <%= form.label :title %>
