--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -31,6 +31,15 @@
         <%= form.date_select :endDate, id: :sprint_endDate, :class => 'form-control' %>
       </div>
 
+      <div class="form-group">
+        <%= form.label :effort %>
+        <%= form.number_field :effort, id: :sprint_effort, :class => 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :remainingWork %>
+        <%= form.number_field :remainingWork, id: :sprint_remainingWork, :class => 'form-control' %>
+      </div>
     </div>
 
     <div class="modal-footer">
