--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -16,16 +16,16 @@
     <th>name</th>
     <th>startDate</th>
     <th>endDate</th>
-    <th></th>
+    <th>remainingWork</th>
   </tr>
   </thead>
   <tbody>
   <% @sprints.each do |sprint| %>
       <tr>
         <td><%= link_to sprint.name,  edit_sprint_path(sprint, :returnUrl => request.original_url), data: {toggle: "modal", target: "#modal"} %></td>
-        <td><%= sprint.startDate.strftime("%d.%m.%Y") %></td>
-        <td><%= sprint.endDate.strftime("%d.%m.%Y") %></td>
-        <td></td>
+        <td><%= sprint.startDate %></td>
+        <td><%= sprint.endDate %></td>
+        <td><%= sprint.remainingWork %></td>
       </tr>
   <% end %>
   </tbody>
