--- a/app/assets/stylesheets/backlogitems.scss
+++ b/app/assets/stylesheets/backlogitems.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the backlogitems controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+td.Low {
+  border-left: 10px solid cornflowerblue;
+}
+
+td.Medium {
+  border-left: 10px solid sandybrown;
+}
+
+td.High {
+  border-left: 10px solid darkred;
+}
