--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -39,3 +39,15 @@
     color: #F7F7F7;
   }
 }
+
+td.Low {
+  border-left: 10px solid cornflowerblue;
+}
+
+td.Medium {
+  border-left: 10px solid sandybrown;
+}
+
+td.High {
+  border-left: 10px solid darkred;
+}
