--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -47,7 +47,7 @@
         <div class="col-md-6">
           <div class="form-group">
             <%= form.label :priority %>
-            <%= form.select :priorty, Task.priorties.keys, {}, {:class => 'form-control'} %>
+            <%= form.select :priority, Task.priorities.keys, {}, {:class => 'form-control'} %>
           </div>
         </div>
         <div class="col-md-6">
