--- a/app/assets/stylesheets/board.scss
+++ b/app/assets/stylesheets/board.scss
@@ -8,7 +8,7 @@
   border-radius: 0 !important;
   border: 1px solid #CCCCCC;
   padding: 5px;
-  border-left: 5px solid cornflowerblue;
+  border-left: 10px solid cornflowerblue;
   float: left;
   display: inline-block;
   max-width: 150px;
@@ -21,9 +21,33 @@
 .userstory {
   border: 1px solid #CCCCCC;
   padding: 5px;
-  border-left: 5px solid sandybrown;
+  border-left: 10px solid sandybrown;
 
   .glyphicon {
     float: right;
   }
+}
+
+.task.Low {
+  border-left: 10px solid cornflowerblue;
+}
+
+.task.Medium {
+  border-left: 10px solid sandybrown;
+}
+
+.task.High {
+  border-left: 10px solid darkred;
+}
+
+.userstory.Low {
+  border-left: 10px solid cornflowerblue;
+}
+
+.userstory.Medium {
+  border-left: 10px solid sandybrown;
+}
+
+.userstory.High {
+  border-left: 10px solid darkred;
 }
