--- a/app/views/backlogitems/index.html.erb
+++ b/app/views/backlogitems/index.html.erb
@@ -25,7 +25,7 @@
   <tbody>
     <% @backlogitems.each do |backlogitem| %>
       <tr>
-        <td><%= link_to backlogitem.title, edit_backlogitem_path(backlogitem), data: {toggle: "modal", target: "#modal"}  %></td>
+        <td class="<%= backlogitem.priorty %>"><%= link_to backlogitem.title, edit_backlogitem_path(backlogitem), data: {toggle: "modal", target: "#modal"}  %></td>
         <td><%= backlogitem.priorty %></td>
         <td><% if backlogitem.assignedto.to_i != 0 %>
               <%=  User.find(backlogitem.assignedto.to_i).email %>
