--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -40,6 +40,11 @@
         <%= form.label :remainingWork %>
         <%= form.number_field :remainingWork, id: :sprint_remainingWork, :class => 'form-control' %>
       </div>
+
+      <div class="form-group">
+        <%= form.label "Retroperspektive" %>
+        <%= form.text_area :retroperspective, id: :sprint_retroperspective, :class => 'form-control' %>
+      </div>
     </div>
 
     <div class="modal-footer">
