--- a/app/views/backlogitems/_form.html.erb
+++ b/app/views/backlogitems/_form.html.erb
@@ -63,6 +63,11 @@
         <%= form.select :sprint_id, Sprint.where(:project_id => @backlogitem.project_id).collect {|p| [p.name, p.id]}, {include_blank: "Select something"}, {:class => 'form-control'} %>
       </div>
 
+      <div class="form-group">
+        <%= form.label "Akzeptanzkriterium" %>
+        <%= form.text_area :acceptancecriterion, id: :sprint_acceptancecriterion, :class => 'form-control' %>
+      </div>
+
     </div>
     <div class="modal-footer">
       <%= link_to 'Close', backlogitems_path(:project => @project_id), :class => 'btn btn-default' %>
