--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -42,8 +42,13 @@
       </div>
 
       <div class="form-group">
-        <%= form.label "Retroperspektive" %>
+        <%= form.label :retroperspective %>
         <%= form.text_area :retroperspective, id: :sprint_retroperspective, :class => 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :sprintreview %>
+        <%= form.text_area :sprintreview, id: :sprint_sprintreview, :class => 'form-control' %>
       </div>
     </div>
 
