--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -15,41 +15,37 @@
 
       <%= form.hidden_field :project_id, id: :sprint_project_id, :class => 'form-control' %>
       <%= hidden_field_tag :returnUrl, @returnUrl %>
+      <fieldset <%= @sprintstarted %>>
+        <div class="form-group">
+          <%= form.label :name %>
+          <%= form.text_field :name, id: :sprint_name, :class => 'form-control' %>
+        </div>
 
-      <div class="form-group">
-        <%= form.label :name %>
-        <%= form.text_field :name, id: :sprint_name, :class => 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= form.label :startDate %>
+          <%= form.date_select :startDate, id: :sprint_startDate, :class => 'form-control' %>
+        </div>
 
-      <div class="form-group">
-        <%= form.label :startDate %>
-        <%= form.date_select :startDate, id: :sprint_startDate, :class => 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= form.label :endDate %>
+          <%= form.date_select :endDate, id: :sprint_endDate, :class => 'form-control' %>
+        </div>
+      </fieldset>
 
-      <div class="form-group">
-        <%= form.label :endDate %>
-        <%= form.date_select :endDate, id: :sprint_endDate, :class => 'form-control' %>
-      </div>
+      <% if !@sprint.id.nil? %>
+          <fieldset <%= @sprintInProgress %>>
+            <div class="form-group">
+              <%= form.label :retroperspective %>
+              <%= form.text_area :retroperspective, id: :sprint_retroperspective, :class => 'form-control' %>
+            </div>
 
-      <div class="form-group">
-        <%= form.label :effort %>
-        <%= form.number_field :effort, id: :sprint_effort, :class => 'form-control' %>
-      </div>
 
-      <div class="form-group">
-        <%= form.label :remainingWork %>
-        <%= form.number_field :remainingWork, id: :sprint_remainingWork, :class => 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= form.label :retroperspective %>
-        <%= form.text_area :retroperspective, id: :sprint_retroperspective, :class => 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= form.label :sprintreview %>
-        <%= form.text_area :sprintreview, id: :sprint_sprintreview, :class => 'form-control' %>
-      </div>
+            <div class="form-group">
+              <%= form.label :sprintreview %>
+              <%= form.text_area :sprintreview, id: :sprint_sprintreview, :class => 'form-control' %>
+            </div>
+          </fieldset>
+      <% end %>
     </div>
 
     <div class="modal-footer">
