--- a/app/views/sprints/edit.html.erb
+++ b/app/views/sprints/edit.html.erb
@@ -1,4 +1,11 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="myModalLabel">Editing Sprint</h4>
+  <h4 class="modal-title" id="myModalLabel">Editing Sprint
+    <% if @sprint.startDate < Date.today && @sprint.endDate > Date.today %>
+        <span class="label label-warning">In Progress</span>
+    <% end %>
+    <% if @sprint.startDate < Date.today && @sprint.endDate < Date.today %>
+        <span class="label label-success">Done</span>
+    <% end %>
+  </h4>
 </div>
 <%= render 'form', sprint: @sprint %>
