--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,32 +29,34 @@
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <li><%= link_to "Dashboard", "/" %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            <%
-              if params[:project]
-                @current_project = Project.find(params[:project]).name
-              end
-              if @current_project.nil?
-                @current_project = 'Projekte'
-              end
-            %>
-            <%= @current_project %>
-            <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <% Project.all.each do |project| %>
-                <li>
-                  <a>
-                    <%= link_to project.name, project %>
-                  </a>
-                </li>
-            <% end %>
-            <li role="separator" class="divider"></li>
-            <li>
-              <%= link_to "Neues Projekt", new_project_path %>
-            </li>
-          </ul>
-        </li>
+        <% if user_signed_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <%
+                if params[:project]
+                  @current_project = Project.find(params[:project]).name
+                end
+                if @current_project.nil?
+                  @current_project = 'Projekte'
+                end
+              %>
+              <%= @current_project %>
+              <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <% Project.all.each do |project| %>
+                  <li>
+                    <a>
+                      <%= link_to project.name, project %>
+                    </a>
+                  </li>
+              <% end %>
+              <li role="separator" class="divider"></li>
+              <li>
+                <%= link_to "Neues Projekt", new_project_path %>
+              </li>
+            </ul>
+          </li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
